# FSD-car

./: .env  .env.example  .gitattributes  .gitignore  4.py  Cargo.toml  HANDOFF.md  README.md  Script Editor.py  bc_anchor.pth  dataset_probe.py  diagnose_fsd.py  dora_dataflow.yaml  dora_dataflow_mapping.yaml  dora_dataflow_phase2_abc_probe.yaml  dora_dataflow_ppo.yaml  dora_dataflow_spice.yaml  dora_dataflow_spice_bc.yaml  dora_dataflow_spice_bc_probe.yaml  dora_purity_test.yaml  fsd-car.xml  isaac_deep_probe.py  nmpc_telemetry.csv  repomix-output.xml  repomix.config.json  test_frog.py  test_port_lock.py  topo_memory.json
.cargo/: config.toml
amr_bionic_eye/: Cargo.toml
amr_bionic_eye/src/: main.rs
amr_bionic_eye/src/perception/: mod.rs
assets/: fsd_car_clean.usd  fsd_car_racetrack.usd
assets/Collected_fsd_car_racetrack/: .collect.mapping.json  fsd_car_racetrack.usd
assets/Collected_fsd_car_racetrack/Collected_fsd_car_racetrack/Props/YCB/Axis_Aligned/: 004_sugar_box.usd  006_mustard_bottle.usd
assets/Collected_fsd_car_racetrack/Collected_fsd_car_racetrack/Robots/NVIDIA/Jetbot/configuration/: jetbot_robot_schema.usd
assets/Collected_fsd_car_racetrack/Props/YCB/Axis_Aligned/: 004_sugar_box.usd  006_mustard_bottle.usd
assets/Collected_fsd_car_racetrack/run/media/zhz/数据/isaac_assets/Assets/Isaac/6.0/Isaac/Props/Forklift/: S_ForkliftFork.usd
assets/Collected_fsd_car_racetrack/run/media/zhz/数据/isaac_assets/Assets/Isaac/6.0/Isaac/Props/PackingTable/props/SM_HeavyDutyPackingTable_C02_01/: SM_HeavyDutyPackingTable_C02_01_physics.usd
assets/Collected_fsd_car_racetrack/run/media/zhz/数据/isaac_assets/Assets/Isaac/6.0/Isaac/Props/PackingTable/props/sm_whitecorrugatedbox_b/: sm_whitecorrugatedbox_b04_brown_01.usd  sm_whitecorrugatedbox_b04_brown_01_physics.usd  (+3 more)
assets/phase4/: warehouse_nav14_overlay.manifest.json  warehouse_nav14_overlay.usda
brain/spiced_rl_trainer/: train_bc_anchor.py  train_ppo_self_play.py
brain/spiced_rl_trainer/env/: fsd_env.py
brain/spiced_rl_trainer/utils/: audit_spice_dataset.py  freeze_phase0_baseline.py  hindsight_purifier.py  probe_bc_policy.py
contracts/phase3/: README.md  SHA256SUMS  domain_scene_baseline.json  inspect_usd_scenes.py  validate_phase3.py
contracts/phase4/: README.md  SHA256SUMS  build_semantic_overlay.py  capture_smoke_dataset.py  phase4_status.json  test_warehouse_semantics.py  validate_phase4.py  warehouse_semantics.py
contracts/phase5/: README.md  SHA256SUMS  build_oracle_map.py  build_perception_oracle_map.py  depth_bev_geometry.py  dora_dataflow_phase5d_runtime.yaml  dora_dataflow_phase5e_live.yaml  dora_dataflow_phase5f_shadow.yaml  dora_dataflow_phase5i_control.yaml  dora_dataflow_phase5j_resilience.yaml  dora_dataflow_phase5k_resilience.yaml  generate_phase5c3_dataset.py  oracle_nmpc_closed_loop.py  phase5a_status.json  phase5b_shadow_replay.py  phase5b_status.json  phase5c2_geometry_upper_bound.py  phase5c2_status.json  phase5c3_candidate_shadow.py  phase5c3_contract.json  phase5c3_status.json  phase5c_dynamic_upper_bound.py  phase5c_status.json  phase5d_contract.json  phase5d_multiseed_robustness.py  phase5d_runtime_node.py  phase5d_runtime_sink.py  phase5d_runtime_source.py  phase5d_status.json  phase5e_contract.json  phase5e_live_isaac_source.py  phase5e_live_shadow_node.py  phase5e_live_sink.py  phase5e_real_calibration.schema.json  phase5e_real_calibration_audit.py  phase5e_status.json  phase5f_contract.json  phase5f_contract_v1_rejected.json  phase5f_dual_nmpc_shadow.py  phase5f_status.json  (+78 more)
contracts/phase6/: README.md  SHA256SUMS  phase6_contract.json  phase6_matrix.py  phase6_status.json  run_phase6_matrix.py  test_phase6_matrix.py  test_phase6_runner.py  test_phase6_validation.py  validate_phase6.py
contracts/phase7/: README.md  SHA256SUMS  deployment_profile_zh-CN.md  phase7_contract.json  phase7_profile.py  phase7_status.json  run_phase7_profile.py  test_phase7_profile.py  test_phase7_profiler.py  test_phase7_validation.py  validate_phase7.py
contracts/real_vehicle/: README.md  SHA256SUMS  audit_real_vehicle_readiness.py  pre_hardware_status.json  real_vehicle_acceptance.py  real_vehicle_acceptance_contract.json  test_audit_real_vehicle_readiness.py  test_real_vehicle_acceptance.py  test_validate_pre_hardware.py  validate_pre_hardware.py
contracts/v1/: README.md  SHA256SUMS  data_contracts.json  validate_contracts.py
core-bridge/: Cargo.toml
core-bridge/src/: main.rs
core-control/: Cargo.toml  build.rs
core-control/src/: control_safety.rs  ffi.rs  lib.rs  sensor_fusion.rs  solver.rs
core-decision/: Cargo.toml
core-decision/src/: lib.rs  messages.rs
core-decision/src/topo_graph/: graph.rs  mod.rs  node.rs
core-perception/: Cargo.toml
core-perception/src/: lib.rs
core-perception/src/perception/: frog_eye.rs  ipm_projector.rs  matcher.rs  mod.rs  pidnet_engine.rs  xfeat_engine.rs
dataset/: spice_human_data_20260709_112209.csv
docs/evidence/: final_metrics.json
model/: DELIVERY.json  spiced_brain.onnx.data  warehouse_nav14_candidate.json
mujoco-nmpc-car/: .gitignore  README.md  mujoco_nmpc_run.py  network_check.py
scripts/: check_repo_hygiene.py  test_repo_hygiene.py
showcase/: Cargo.toml
simulation-env/: bc_safety_probe_node.py  china_residential_estate.xml  expert_logger_node.py  extract_dora.py  extract_espfc.py  find_onnx_dylib.py  generate_solver.py  goal_hud_node.py  inspect_ort_package.py  isaac_dora_node.py  isaac_purity_node.py  keyboard_teleop.py  mujoco_nmpc_run.py  nmpc_model.py  optical_reflex_node.py  phase2_abc_probe_node.py  ppo_brain_node.py  probe_cuda_providers.py  probe_fsd_loop.py  probe_integration.py  probe_isaac_dora.py  probe_isaac_stage.py  probe_proxy.py  teleop_sender.py  test_isaac_loop.py
tools/diagnostics/: diagnose.py  mock_perception_node.py  network_deep_probe.py  probe_acados_env.py  probe_tcp_boundary.py  test_shm_dataflow.yaml  verify_control.py  zenoh_isolated_test.py
xfeatc/: Cargo.toml
xfeatc/src/: main.rs
xfeatc/src/perception/: mod.rs  xfeat_engine.rs
zenoh-rs/: Cargo.toml
zenoh-rs/src/: main.rs
(+2 files in other folders)
