[workspace]
resolver = "2"

members = [
    "core-perception",
    "core-control",
    "core-decision",
    "showcase",
]

[workspace.dependencies]
opencv = { version = "0.93", default-features = false, features = [
    "imgproc",
    "imgcodecs",
    "calib3d",
    "features2d",
    "videoio",
    "highgui",
] }
ort = { version = "=2.0.0-rc.11", default-features = false, features = [
    "std",
    "tls-rustls",
    "load-dynamic",
] }

tokio = { version = "1.38", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }

ndarray = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
