[package]
name = "amr_bionic_eye"
version = "2.5.0"
edition = "2021"

[dependencies]
# 工业级 OpenCV 绑定，移除冗余的 clang 依赖声明（系统层底座已自动接管）
opencv = { version = "0.93", default-features = false, features = ["imgproc", "videoio"] }
# 异步运行时
tokio = { version = "1.38", features = ["full"] }
# 零拷贝字节序列化
serde = { version = "1.0", features = ["derive"] }