[package]
name = "core-control"
version = "0.1.0"
edition = "2021"

[dependencies]
# 🛡️ 继承自根目录 Workspace 的统一定义
opencv = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
libc = "0.2" # 🛡️ 新增：用于 FFI C 类型映射

# 🛡️ 新增：DORA 节点 API 与 Arrow 内存底座
dora-node-api = "0.3.13"
# ⚠️ 架构师修正：删除独立的 arrow 依赖，直接使用 dora_node_api 内部重导出的版本，杜绝多重宇宙冲突！
eyre = "0.6"

# 🚑 紧急修复：强行锁定 chrono 版本，解决 arrow 52.0 与 chrono 0.4.45 的 quarter() 命名冲突
chrono = "=0.4.39"

# 🛡️ 新增：引入感知引擎，实现快系统闭环
core-perception = { path = "../core-perception" }

[build-dependencies]
cc = "1.0" # 🛡️ 新增：用于编译或链接 C 代码