[package]
name = "core-control"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
libc = "0.2"
ort = { workspace = true }

dora-node-api = "0.3.13"
eyre = "0.6"
chrono = "=0.4.39"
core-perception = { path = "../core-perception" }

[build-dependencies]
cc = "1.0"
