[package]
name = "core-decision"
version = "0.1.0"
edition = "2021"

[dependencies]
# 🛡️ 完备继承自根目录顶级声明，保持全栈版本一致性
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# 🛡️ 新增：并网所需的视觉与通信底座
opencv = { workspace = true }
dora-node-api = "0.3.3"
eyre = "0.6"
core-perception = { path = "../core-perception" }
