[package]
name = "showcase"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { workspace = true }
ort = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }

core-perception = { path = "../core-perception" }
core-decision = { path = "../core-decision" }

[[bin]]
name = "demo_xfeat"
path = "src/bin/demo_xfeat.rs"

[[bin]]
name = "demo_frog"
path = "src/bin/demo_frog.rs"

[[bin]]
name = "perception_sandbox"
path = "src/bin/perception_sandbox.rs"
