[package]
name = "amr_xfeat_homing"
version = "2.5.0"
edition = "2021"

[dependencies]
# 工业级图像处理和几何解算，启用 highgui 用于 WSLg 窗口渲染
opencv = { version = "0.93", default-features = false, features = ["imgproc", "calib3d", "features2d", "videoio", "highgui"] }
# pykeio/ort - 当前最高效的 ONNX Runtime 异步推理引擎，启用 tls-rustls 后端
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "copy-dylibs", "tls-rustls", "download-binaries"] }
# 异步运行时
tokio = { version = "1.38", features = ["full"] }
# 矩阵运算多维数组
ndarray = "0.15"
# 零拷贝二进制序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"